--- a/Thesis/ref.bib
+++ b/Thesis/ref.bib
@@ -1,5 +1,37 @@
 ﻿% This file was created with Citavi 6.2.0.12
 
+@proceedings{.2018,
+ year = {2018},
+ title = {{Communication Papers of the 2018 Federated Conference on Computer Science and Information Systems}},
+ publisher = {PTI},
+ series = {{Annals of Computer Science and Information Systems}}
+}
+
+
+@inproceedings{Adams.2018,
+ author = {Adams, Tim and D{\"o}rpinghaus, Jens and Jacobs, Marc and Steinhage, Volker},
+ title = {{Automated lung tumor detection and diagnosis in CT Scans using texture feature analysis and SVM}},
+ pages = {13--20},
+ publisher = {PTI},
+ series = {{Annals of Computer Science and Information Systems}},
+ booktitle = {{Communication Papers of the 2018 Federated Conference on Computer Science and Information Systems}},
+ year = {2018},
+ doi = {10.15439/2018F176}
+}
+
+
+@article{Aksoy.2015,
+ author = {Aksoy, Eren Erdal and Abramov, Alexey and W{\"o}rg{\"o}tter, Florentin and Scharr, Hanno and Fischbach, Andreas and Dellen, Babette},
+ year = {2015},
+ title = {{Modeling leaf growth of rosette plants using infrared stereo image sequences}},
+ pages = {78--90},
+ volume = {110},
+ issn = {01681699},
+ journal = {{Computers and Electronics in Agriculture}},
+ doi = {10.1016/j.compag.2014.10.020}
+}
+
+
 @article{ArgandaCarreras.2017,
  abstract = {Summary
 
@@ -23,8 +55,36 @@ Supplementary data are available at Bioinformatics online.},
  pages = {2424--2426},
  volume = {33},
  number = {15},
- journal = {{Bioinformatics (Oxford, England)}},
+ journal = {{Bioinformatics}},
  doi = {10.1093/bioinformatics/btx180}
+}
+
+
+@article{Armato.2016,
+ abstract = {The purpose of this work is to describe the LUNGx Challenge for the computerized classification of lung nodules on diagnostic computed tomography (CT) scans as benign or malignant and report the performance of participants' computerized methods along with that of six radiologists who participated in an observer study performing the same Challenge task on the same dataset. The Challenge provided sets of calibration and testing scans, established a performance assessment process, and created an infrastructure for case dissemination and result submission. Ten groups applied their own methods to 73 lung nodules (37 benign and 36 malignant) that were selected to achieve approximate size matching between the two cohorts. Area under the receiver operating characteristic curve (AUC) values for these methods ranged from 0.50 to 0.68; only three methods performed statistically better than random guessing. The radiologists' AUC values ranged from 0.70 to 0.85; three radiologists performed statistically better than the best-performing computer method. The LUNGx Challenge compared the performance of computerized methods in the task of differentiating benign from malignant lung nodules on CT scans, placed in the context of the performance of radiologists on the same task. The continued public availability of the Challenge cases will provide a valuable resource for the medical imaging research community.},
+ author = {Armato, Samuel G. and Drukker, Karen and Li, Feng and Hadjiiski, Lubomir and Tourassi, Georgia D. and Engelmann, Roger M. and Giger, Maryellen L. and Redmond, George and Farahani, Keyvan and Kirby, Justin S. and Clarke, Laurence P.},
+ year = {2016},
+ title = {{LUNGx Challenge for computerized lung nodule classification}},
+ pages = {044506},
+ volume = {3},
+ number = {4},
+ issn = {2329-4302},
+ journal = {{Journal of Medical Imaging}},
+ doi = {10.1117/1.JMI.3.4.044506}
+}
+
+
+@article{Dellen.2015,
+ abstract = {Plant growth is a dynamic process, and the precise course of events during early plant development is of major interest for plant research. In this work, we investigate the growth of rosette plants by processing time-lapse videos of growing plants, where we use Nicotiana tabacum (tobacco) as a model plant. In each frame of the video sequences, potential leaves are detected using a leaf-shape model. These detections are prone to errors due to the complex shape of plants and their changing appearance in the image, depending on leaf movement, leaf growth, and illumination conditions. To cope with this problem, we employ a novel graph-based tracking algorithm which can bridge gaps in the sequence by linking leaf detections across a range of neighboring frames. We use the overlap of fitted leaf models as a pairwise similarity measure, and forbid graph edges that would link leaf detections within a single frame. We tested the method on a set of tobacco-plant growth sequences, and could track the first leaves of the plant, including partially or temporarily occluded ones, along complete sequences, demonstrating the applicability of the method to automatic plant growth analysis. All seedlings displayed approximately the same growth behavior, and a characteristic growth signature was found.},
+ author = {Dellen, Babette and Scharr, Hanno and Torras, Carme},
+ year = {2015},
+ title = {{Growth Signatures of Rosette Plants from Time-Lapse Video}},
+ keywords = {Algorithms;Computer Simulation;Image Interpretation, Computer-Assisted/methods;Models, Biological;Plant Leaves/anatomy {\&} histology/growth {\&} development;Time-Lapse Imaging/methods;Tobacco/anatomy {\&} histology/growth {\&} development},
+ pages = {1470--1478},
+ volume = {12},
+ number = {6},
+ journal = {{IEEE/ACM Transactions on Computational Biology and Bioinformatics}},
+ doi = {10.1109/TCBB.2015.2404810}
 }
 
 
@@ -32,7 +92,6 @@ Supplementary data are available at Bioinformatics online.},
  author = {Ferreira, T. and Rasband, W.},
  year = {2012},
  title = {{ImageJ User Guide: IJ 1.42r}},
- publisher = {ImageJ Documentation},
  url = {https://books.google.de/books?id=JgAcmQEACAAJ}
 }
 
@@ -46,8 +105,17 @@ Supplementary data are available at Bioinformatics online.},
  pages = {909--921},
  volume = {61},
  number = {6},
- journal = {{The Plant journal : for cell and molecular biology}},
+ journal = {{The Plant Journal}},
  doi = {10.1111/j.1365-313X.2009.04086.x}
+}
+
+
+@article{Kulkarni.2015,
+ author = {Kulkarni, Shraddha G. and Bagal, Sahebrao B.},
+ year = {2015},
+ title = {{Techniques for Lung Cancer Nodule Detection: A Survey}},
+ volume = {02},
+ number = {09}
 }
 
 
@@ -60,6 +128,31 @@ Supplementary data are available at Bioinformatics online.},
 }
 
 
+@article{Minervini.2014,
+ author = {Minervini, Massimo and Abdelsamea, Mohammed M. and Tsaftaris, Sotirios A.},
+ year = {2014},
+ title = {{Image-based plant phenotyping with incremental learning and active contours}},
+ pages = {35--48},
+ volume = {23},
+ issn = {15749541},
+ journal = {{Ecological Informatics}},
+ doi = {10.1016/j.ecoinf.2013.07.004}
+}
+
+
+@article{Minervini.2015,
+ author = {Minervini, Massimo and Scharr, Hanno and Tsaftaris, Sotirios A.},
+ year = {2015},
+ title = {{Image Analysis: The New Bottleneck in Plant Phenotyping [Applications Corner]}},
+ pages = {126--131},
+ volume = {32},
+ number = {4},
+ issn = {1053-5888},
+ journal = {{IEEE Signal Processing Magazine}},
+ doi = {10.1109/MSP.2015.2405111}
+}
+
+
 @article{Minervini.2016,
  author = {Minervini, Massimo and Fischbach, Andreas and Scharr, Hanno and Tsaftaris, Sotirios A.},
  year = {2016},
@@ -69,6 +162,20 @@ Supplementary data are available at Bioinformatics online.},
  issn = {01678655},
  journal = {{Pattern Recognition Letters}},
  doi = {10.1016/j.patrec.2015.10.013}
+}
+
+
+@inproceedings{Pape.2015,
+ author = {Pape, Jean-Michel and Klukas, Christian},
+ title = {{Utilizing machine learning approaches to improve the prediction of leaf counts and individual leaf segmentation of rosette plant images}},
+ url = {https://dx.doi.org/10.5244/C.29.CVPPP.3},
+ pages = {3.1--3.12},
+ publisher = {{BMVA Press}},
+ isbn = {1-901725-55-3},
+ editor = {{S. A. Tsaftaris, H. Scharr} and Pridmore, T.},
+ booktitle = {{Proceedings of the Computer Vision Problems in Plant Phenotyping (CVPPP)}},
+ year = {2015},
+ doi = {10.5244/C.29.CVPPP.3}
 }
 
 
@@ -91,8 +198,17 @@ Scientific imaging benefits from open-source programs that advance new method de
  pages = {529},
  volume = {18},
  number = {1},
- journal = {{BMC bioinformatics}},
+ journal = {{BMC Bioinformatics}},
  doi = {10.1186/s12859-017-1934-z}
+}
+
+
+@proceedings{S.A.TsaftarisH.Scharr.2015,
+ year = {2015},
+ title = {{Proceedings of the Computer Vision Problems in Plant Phenotyping (CVPPP)}},
+ publisher = {{BMVA Press}},
+ isbn = {1-901725-55-3},
+ editor = {{S. A. Tsaftaris, H. Scharr} and Pridmore, T.}
 }
 
 
@@ -105,6 +221,19 @@ Scientific imaging benefits from open-source programs that advance new method de
 }
 
 
+@article{Scharr.2016,
+ author = {Scharr, Hanno and Minervini, Massimo and French, Andrew P. and Klukas, Christian and Kramer, David M. and Liu, Xiaoming and Luengo, Imanol and Pape, Jean-Michel and Polder, Gerrit and Vukadinovic, Danijela and Yin, Xi and Tsaftaris, Sotirios A.},
+ year = {2016},
+ title = {{Leaf segmentation in plant phenotyping: a collation study}},
+ pages = {585--606},
+ volume = {27},
+ number = {4},
+ issn = {0932-8092},
+ journal = {{Machine Vision and Applications}},
+ doi = {10.1007/s00138-015-0737-3}
+}
+
+
 @article{Schindelin.2012,
  abstract = {Fiji is a distribution of the popular open-source software ImageJ focused on biological-image analysis. Fiji uses modern software engineering practices to combine powerful software libraries with a broad range of scripting languages to enable rapid prototyping of image-processing algorithms. Fiji facilitates the transformation of new algorithms into ImageJ plugins that can be shared with end users through an integrated update system. We propose Fiji as a platform for productive collaboration between computer science and biology research communities.},
  author = {Schindelin, Johannes and Arganda-Carreras, Ignacio and Frise, Erwin and Kaynig, Verena and Longair, Mark and Pietzsch, Tobias and Preibisch, Stephan and Rueden, Curtis and Saalfeld, Stephan and Schmid, Benjamin and Tinevez, Jean-Yves and White, Daniel James and Hartenstein, Volker and Eliceiri, Kevin and Tomancak, Pavel and Cardona, Albert},
@@ -114,8 +243,21 @@ Scientific imaging benefits from open-source programs that advance new method de
  pages = {676--682},
  volume = {9},
  number = {7},
- journal = {{Nature methods}},
+ journal = {{Nature Methods}},
  doi = {10.1038/nmeth.2019}
+}
+
+
+@inproceedings{Soille.1990,
+ author = {Soille, Pierre and Vincent, Luc M.},
+ title = {{Determining watersheds in digital pictures via flooding simulations}},
+ pages = {240--250},
+ publisher = {SPIE},
+ series = {{SPIE Proceedings}},
+ editor = {Kunt, Murat},
+ booktitle = {{Visual Communications and Image Processing '90: Fifth in a Series}},
+ year = {1990},
+ doi = {10.1117/12.24211}
 }
 
 
@@ -127,17 +269,8 @@ Scientific imaging benefits from open-source programs that advance new method de
  pages = {14},
  volume = {11},
  issn = {1746-4811},
- journal = {{Plant methods}},
+ journal = {{Plant Methods}},
  doi = {10.1186/s13007-015-0056-8}
 }
 
 
-@article{Adams.2018,
- author = {Adams, Tim and Dörpinghaus, Jens and Jacobs, Marc and Steinhage, Volker},
- year = {2018},
- title = {{Automated lung tumor detection and diagnosis in CT Scans using feature analysis and SVM}},
- pages = {13--20},
- volume = {17},
- journal = {{Communication Papers of the 2018 Federated Conference on Computer Science and Information Systems}},
- doi = {10.15439/2018F176}
- }
